# university-conferences

./: .gitignore  README.md  analyze_page_content.py  analyze_page_headers.py  conference_section_headers.json  conference_timeline_map_edit_links.json  conference_timeline_map_edit_links_with_wikitext.json  conferences.csv  identify_timeline_maps.py  infer_wiki_links.py  main.py  modeled-db-design.mwb  pyproject.toml  query_membership_maps.py  query_wikipedia_api.py  testing.sql
data-assembly/: README.md  add_timeline_maps_to_other_data.py  analyze_page_content.py  analyze_page_headers.py  conference_section_headers.csv  conferences.csv  extract_section_headers.py  identify_timeline_maps.py  infer_wiki_links.py  query_membership_maps.py  query_wikipedia_api.py  sanity_check_final_data.py
llm-request/: build_structured_payload_upserts.py  conferences_with_links.csv  convert_data_to_sql.py  create_conferences_wiki_links.py  create_db.sql  database_design_prompt.md  database_design_request.py  database_design_response.md  extract_data_wiki_prompt.md  extract_uni_conference_data_from_wiki.py  extract_wiki_data.py  extract_wiki_data_prompt.md  extracted_data_response_TEST.md  finalize_executable_sql.py  inspect_first_response_text.py  inspect_response_text.py  post_load_validation.sql  preprocess_extracted_sql.py  repair_structured_payloads.py  rerun_incomplete_conference_extractions.py  token_counter.py  university_of_chicago_history.sql
llm-request/processed-json/: extraction_completeness_report.json  final_upsert_summary.json  incomplete_conferences.txt  (+1 more)
(+12 files in other folders)
