[project]
name = "university-conferences"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-genai>=1.64.0",
    "google-generativeai>=0.8.6",
    "pandas>=3.0.1",
    "requests>=2.32.5",
]
